# cmdguard

./: .gitignore  Cargo.toml  IDEAS.md  LICENSE  README.md  flake.nix  install.sh  rust-toolchain.toml
.github/workflows/: ci.yml  policy-test.yml  release.yml
.regal/: config.yaml
config/: builtins.ncl  commands.ncl  commands.ncl.example  docker.rego  file-ops.rego  find.rego  gh.rego  git.rego  go.rego  inproject.rego  javascript.rego  jira.rego  js.rego  kubectl.rego  mise.rego  network.rego  nickel.rego  nix.rego  opa.rego  openssl.rego  policy_tests.yaml  psql.rego  python.ncl  python.rego  rego.rego  rust.rego  safe.rego  sed.rego  stdlib.rego  swift.rego  tools.rego
config/policies/: custom.rego
config/queries/: python_dangerous.scm  python_imports.scm
docs/: common-rules.md  security-model.md
docs/plans/: 2026-01-28-claude-permissions-design.md  2026-01-28-claude-permissions-impl.md  2026-01-30-improvements-design.md  2026-02-02-compound-commands.md  2026-02-02-rego-refactoring.md  2026-02-03-command-definitions-design.md  2026-02-03-nickel-runtime-design.md  2026-02-03-trust-zones-design.md  2026-02-10-python-inline-code-design.md  2026-02-21-rule-ergonomics-design.md  (+1 more)
examples/: policy.rego  policy_tests.yaml
examples/split/: git.rego  (+3 more)
policies/: stdlib.rego  test_policy.rego
src/: base_sync.rs  cli.rs  command_defs.rs  command_evaluator.rs  command_parser.rs  extractor.rs  flags.rs  hook.rs  input.rs  logging.rs  main.rs  nickel_config.rs  output.rs  parser.rs  paths.rs  policy.rs  python_analyzer.rs  query.rs  resolver.rs  test_runner.rs  tokenizer.rs
tests/: hook_run.rs
(+18 files in other folders)
