[package]
name = "claude-permissions"
version = "0.8.0"
edition = "2021"
description = "PreToolUse hook for policy-driven permission control"

[dependencies]
regorus = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
serde_yaml = "0.9"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
nickel-lang = "2.0"
regex = "1.10"

[dev-dependencies]
tempfile = "3.15"

[profile.release]
lto = true
strip = true
